--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+dj-database-url==0.3.0
 Django==1.8.5
+django-cors-headers==1.1.0
+django-rest-swagger==0.3.4
+djangorestframework==3.3.0
+gunicorn==19.3.0
+psycopg2==2.6.1
+PyYAML==3.11
 wheel==0.24.0
+whitenoise==2.0.4
