--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.8.5
 django-cors-headers==1.1.0
 django-rest-swagger==0.3.4
 djangorestframework==3.3.0
+drf-nested-routers==0.10.0
 gunicorn==19.3.0
 psycopg2==2.6.1
 PyYAML==3.11
