Initial set up test environment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: python
 python:
   - "3.4.3"
+env:
+- PYTHONPATH=api
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: nosetests
+
+before_script:
+  python api/manage.py runserver &
+
+script:
+  coverage run api/manage.py tests
+# coverage run functional_tests.py
