--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install: "pip install -r requirements.txt"
 # command to run tests
 
 before_script:
-  python api/manage.py runserver &
+  python brewkeeper/manage.py runserver &
 
 script:
-  coverage run api/manage.py tests
+  coverage run brewkeeper/manage.py test
 # coverage run functional_tests.py
