--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_script:
   python brewkeeper/manage.py runserver &
 
 script:
-  coverage run brewkeeper/manage.py test
+  run brewkeeper/manage.py test
 # coverage run functional_tests.py
