--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ djangorestframework==3.3.0
 drf-nested-routers==0.10.0
 gunicorn==19.3.0
 psycopg2==2.6.1
+PyJWT==1.4.0
 PyYAML==3.11
+requests==2.8.1
 wheel==0.24.0
 whitenoise==2.0.4
